# ai-financial-analyst

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
app/ui_components/: __init__.py  history.py  layout.py  sections.py
config/: india_universe.json
docs/: phase_1_teaching_modules.md  phase_2_teaching_modules.md  phase_3_teaching_modules.md  phase_4_teaching_modules.md  phase_5_teaching_modules.md  phase_6_teaching_modules.md  phase_7_teaching_modules.md
docs/example_filings/: apple_risk_note.md
docs/example_india/: india_macro_2026-04-01.md  nifty50_sector_map_2026-04-01.md  reliance_ns_2026-04-01.md
docs/example_notes/: nvidia_market_note.md  tesla_market_note.md
scripts/: run_eval.py  smoke_demo.py
src/finance_ai/: __init__.py  config.py
src/finance_ai/agents/: __init__.py  planner.py  quality.py  router.py  synthesis.py
src/finance_ai/llm/: __init__.py  ollama_client.py
src/finance_ai/mcp/: __init__.py  server.py
src/finance_ai/prompts/: __init__.py  finance.py
src/finance_ai/rag/: __init__.py  chunking.py  embeddings.py  reranker.py  retriever.py  service.py  vector_store.py
src/finance_ai/schemas/: agent.py  rag.py  tools.py
tests/: conftest.py  test_agent.py  test_cache.py  test_company_resolution.py  test_fallbacks.py  test_mcp_server.py  test_planner.py  test_quality.py  test_rag.py  test_smoke.py  test_synthesis.py  test_tools.py  test_ui_presenter.py
(+13 files in other folders)
